# candylfs-cli

./: pyproject.toml
.github/workflows/: build.yml
src/candy_lfs/: __main__.py  api.py  cli.py  config.py
